# ComputerVision_ImageProcessing

./: .gitattributes  .gitignore  README.md
camera_related_processing/: CMakeLists.txt  focal_correction.ipynb  focal_correction_dataframe.ipynb  focal_correction_dataframe_const_fr.ipynb  focal_point_position_approximation.ipynb  positional_influence_on_laplacian.ipynb  positional_influence_on_variance.ipynb
data/: black_car.jfif  focal_correction (2).xls  focal_correction.xls  focal_correction_new.xls  leather.jfif  ripaerial.jfif  ripct.jfif
data/stereo/: 2018-10-31-06-55-01.txt  depth_map.hdr
image_analysis/: boundary_descriptor.ipynb  sift.ipynb  template_matching.ipynb
image_processing/: blurness_detection.ipynb  chain_code_4.ipynb  chain_code_8.ipynb  color_spaces_segmentation.ipynb  derivative_of_gaussian.ipynb  gradient_morphological.ipynb  hit_or_miss_transform.ipynb  isolated_pixel_detection.ipynb  top_hat.ipynb  variance_analysis.ipynb  water_shed_segmentation.ipynb  which_part_of_image_is_blurred.ipynb
point_cloud_visualizer/: CMakeLists.txt  README.md  imgui.ini  premake5.lua
point_cloud_visualizer/include/: Application.hpp  Camera.hpp  Engine.hpp  Pch.hpp  Types.hpp
point_cloud_visualizer/shaders/: TestShader.hlsl
point_cloud_visualizer/src/: Application.cpp  Camera.cpp  Engine.cpp  Main.cpp
projects/: water_color_art.ipynb
py/: boundary_descriptor.ipynb  boundary_representation.py  chain_code.py  fourier_descriptor.py  frame_diff.py  glcm.py  histogram.py  mpp.py  segmentation.py  signature.py  snakes.py
src/: affine_transforms.py  blurring_sharpening.py  correlation.py  drawing_basic_primitives.py  fourier_transform.py  noise_smoothing_threshold.py  sharpening.py
tests/part1/: haar_cascade.ipynb  object_detection_cv2.ipynb  particle_filter.py  template_matching.ipynb
tests/part2/: hsv_shadow_removal.py  kalman_filter.py  ycrcb_shadow_removal.py
texture_analysis/: glcm.ipynb  histogram.ipynb
video_analysis/: KF.ipynb  frame_diff.ipynb  frame_differencing_segmentation.py  gmm.py  lukas_kanade_segmentation.py  particle_filter.py
